# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/es2abc_config.gni")
import("//build/ohos.gni")

ohos_shared_library("cj_calendar_manager_ffi") {
  include_dirs = [
    "../common",
    "../native/include",
    "include",
  ]

  sources = [
    "../native/src/calendar_env.cpp",
    "../native/src/data_share_helper_manager.cpp",
    "../native/src/event_filter.cpp",
    "../native/src/native_calendar.cpp",
    "../native/src/native_calendar_manager.cpp",
    "../native/src/native_util.cpp",
    "src/calendar_manager_ffi.cpp",
    "src/cj_calendar.cpp",
    "src/cj_calendar_manager.cpp",
    "src/cj_event_filter.cpp"
  ]

  deps = []

  defines = []

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:data_ability_helper",
    "ability_runtime:napi_base_context",
    "access_token:libaccesstoken_sdk",
    "access_token:libprivacy_sdk",
    "ace_engine:ace_uicontent",
    "c_utils:utils",
    "data_share:datashare_common",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
    "napi:cj_bind_ffi",
    "napi:cj_bind_native",
  ]

  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "applications"
  part_name = "calendar_data"
}
